--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Carburador y Pistón</title>
     <link rel="stylesheet" href="/CSS/reset.css" />
     <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      href="/recursos/IMG/pistones.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <!-- SECCIÓN ENCABEZADO DE PORTADA Y BARRA MENU -->
@@ -18,20 +29,20 @@
         />
       </video>
 
-      <nav>
-        <img class="logo" alt="logo carburador" />
+      <nav id="nav">
+        <img src="/recursos/IMG/logo.png" alt="piston" class="logo" />
         <ul>
-          <li><a href="">INICIO</a></li>
-          <li><a href="">Descripción</a></li>
-          <li><a href="">Noticias</a></li>
-          <li><a href="">Tienda</a></li>
-          <li><a href="">Contacto</a></li>
-          <li><a href="">Ingresar</a></li>
+          <li><a href="#inicio">INICIO</a></li>
+          <li><a href="/HTML/descripcion.html">Descripción</a></li>
+          <li><a href="/HTML/noticias.html">Noticias</a></li>
+          <li><a href="/HTML/tienda.html">Tienda</a></li>
+          <li><a href="/HTML/contacto.html">Contacto</a></li>
+          <li><a href="/HTML/ingresar.html">Ingresar</a></li>
         </ul>
       </nav>
       <div class="contenido">
         <h1>Carburador y Pistón</h1>
-        <a href="">Link para algun lado</a>
+        <!-- <a href="">Link para algun lado</a> -->
       </div>
     </div>
   </body>
