Terminando pagina de descripcion

--- a/HTML/descripcion.html
+++ b/HTML/descripcion.html
@@ -4,6 +4,190 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Descripcion</title>
+    <link rel="stylesheet" href="/CSS/reset.css" />
+    <link rel="stylesheet" href="/CSS/descripcion.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      href="/recursos/IMG/pistones.png"
+      type="image/x-icon"
+    />
   </head>
-  <body></body>
+  <body>
+    <!-- SECCION HEADER -->
+    <header>
+      <nav>
+        <a href="/index.html">INICIO</a>
+      </nav>
+    </header>
+
+    <div class="slider">
+      <div class="list">
+        <div class="item">
+          <img src="/recursos/IMG/imagen-gp.webp" alt="Gps" />
+
+          <div class="content">
+            <h2 class="title">Motos Deportivas</h2>
+            <h3 class="type">MotoGp</h3>
+            <p class="description">
+              Son motos diseñadas para obtener prestaciones puras. Tienen
+              motores potentes, chasis rígidos y suspensiones capaces de
+              soportar apuradas fuertes e inclinaciones. Las motos deportivas
+              actuales son el resultado de una evolución de más de 100 años en
+              competiciones disputadas en circuitos de velocidad. Cuentan con
+              una estética agresiva, dan prestaciones puras y transmiten una
+              sensación única, siendo sus puntos fuertes junto con la
+              aceleración, las inclinaciones y las frenadas. La utilidad y la
+              comodidad son sus puntos débiles. Con la actual legislación en
+              España, el uso de motos deportivas solo se disfruta en circuitos,
+              ya que en el uso diario no son cómodas ni útiles, especialmente
+              por la posición de conducción.
+            </p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/recursos/IMG/imagen-nake.webp" alt="naked" />
+
+          <div class="content">
+            <h2 class="title">Motos Naked</h2>
+            <h3 class="type">Urbana</h3>
+            <p class="description">
+              Estas motos derivan de las deportivas. Su origen surge cuando
+              quitaban el carenado a una moto deportiva, dejándola al "desnudo"
+              y convirtiéndola en una moto Naked. Posteriormente, cambiaron los
+              manillares y la posición de las estriberas para que fuesen más
+              cómodas, con las piernas más bajas y los brazos más altos. En
+              cuanto al chasis, el motor y las suspensiones, mantuvieron el
+              carácter de las motocicletas deportivas, siendo de esta forma una
+              moto de prestaciones altas, pero más cómoda de conducir. El
+              inconveniente principal de estas motos es su nula protección
+              aerodinámica.
+            </p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/recursos/IMG/imagen-cafe.webp" alt="cafe racer" />
+
+          <div class="content">
+            <h2 class="title">Cafe Racer</h2>
+            <h3 class="type">Clasica</h3>
+            <p class="description">
+              Se trata de una moto derivada de los modelos clásicos. Se
+              preparaban en Inglaterra para ser más rápidas en competiciones
+              ilegales de bares. Se ponían semimanillares, cambiaban las
+              estriberas y se personalizaban al gusto de cada propietario. La
+              época dorada en la comercialización de las motos Cafe Racer fue
+              del 2010 hasta el 2020, cuando las grandes marcas empezaron a
+              incluir estas motos en su catálogo. Las actuales Cafe Racer se
+              pueden equiparar a una mezcla entre una moto Naked y una clásica,
+              donde predomina la parte estética. Su posición de conducción es
+              relativamente cómoda, pero no tiene protección aerodinámica.
+            </p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/recursos/IMG/imagen-endu.webp" alt="enduro" />
+
+          <div class="content">
+            <h2 class="title">Motos Enduro</h2>
+            <h3 class="type">Off Road</h3>
+            <p class="description">
+              Son motos que están homologadas para circular por carretera, pero
+              su uso es puramente Off Road. No tienen una llave de contacto, por
+              lo que no la puedes dejar a la vista en la calle. Tampoco tienen
+              un indicador de marchas ni otras cosas que esperas ver en una moto
+              de calle. Las motos de Enduro poseen motores de dos o cuatro
+              tiempos, con muchos bajos y aprovechables. Tienen recorridos de
+              suspensión largos y son motocicletas muy manejables y ligeras, ya
+              que pesan poco más de 100 kilos. Están diseñadas para circular por
+              sendas y caminos de mucha dificultad, así como para tener la
+              capacidad de llegar a cualquier parte.
+            </p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/recursos/IMG/imagen-scam.webp" alt="scrambler" />
+
+          <div class="content">
+            <h2 class="title">Motos Scrambler</h2>
+            <h3 class="type">Modificadas</h3>
+            <p class="description">
+              Se pueden definir como motos clásicas con tacos. Se suelen
+              confundir con las Cafe Racer, pero para distinguirlas debes
+              fijarte en las ruedas de tacos y los manillares. Una moto Cafe
+              Racer tiene los manillares de tipo carretera, mientras que el
+              manillar de una Scrambler siempre será de campo. La posición de
+              una moto de campo es la que aporta más control sobre el vehículo y
+              resulta muy cómoda. En cuanto a los inconvenientes de la
+              Scrambler, cabe señalar que no tiene protección aerodinámica y,
+              debido a los tacos de las ruedas, sentirás más vibraciones al
+              conducirla y tendrás menos agarre en el asfalto.
+            </p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/recursos/IMG/imagen-tour.webp" alt="touring" />
+
+          <div class="content">
+            <h2 class="title">Motos Touring</h2>
+            <h3 class="type">Viajar</h3>
+            <p class="description">
+              Se consideran como las limusinas del mundo de las motos. Están
+              diseñadas principalmente para viajar, ya que son muy cómodas y
+              disponen de tecnologías y accesorios para que puedas pasar muchas
+              horas montado en una de ellas. Con las motos Touring, se prioriza
+              la búsqueda de la comodidad del pasajero y su capacidad de carga
+              para llevar el equipaje, siendo de esta forma las motos perfectas
+              para viajar en pareja. Estas motos son muy estables y cuentan con
+              una protección aerodinámica excelente, por lo que puedes circular
+              con comodidad por autovías incluso en días de mal tiempo. Tienen
+              motores grandes con mucho par, pero al mismo tiempo muy suaves,
+              facilitando la conducción en marchas largas, ya que responden con
+              un gran empuje al menor giro
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- SECCION THUMBNAIL -->
+      <div class="thumbnail">
+        <div class="item">
+          <img src="/recursos/IMG/imagen-gp.webp" alt="motogp" />
+        </div>
+        <div class="item">
+          <img src="/recursos/IMG/imagen-nake.webp" alt="naked" />
+        </div>
+        <div class="item">
+          <img src="/recursos/IMG/imagen-cafe.webp" alt="motocafe" />
+        </div>
+        <div class="item">
+          <img src="/recursos/IMG/imagen-endu.webp" alt="motoenduro" />
+        </div>
+        <div class="item">
+          <img src="/recursos/IMG/imagen-scam.webp" alt="motoscram" />
+        </div>
+        <div class="item">
+          <img src="/recursos/IMG/imagen-tour.webp" alt="mototour" />
+        </div>
+      </div>
+
+      <!-- SECCION NEXT PREV -->
+      <div class="next_prev_arrows">
+        <button class="next" onclick="moveSlider()"><</button>
+        <button class="prev" onclick="moveSlider()">></button>
+      </div>
+    </div>
+
+    <script src="/JS/descripcion.js"></script>
+  </body>
 </html>
