finalizacion de pagina de noticias

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <nav id="nav">
         <img src="/recursos/IMG/logo.png" alt="piston" class="logo" />
         <ul>
-          <li><a href="#inicio">INICIO</a></li>
+          <li><a href="/index.html">INICIO</a></li>
           <li><a href="/HTML/descripcion.html">Descripción</a></li>
           <li><a href="/HTML/noticias.html">Noticias</a></li>
           <li><a href="/HTML/tienda.html">Tienda</a></li>
